refactor(service): ♻️ 优化用户信息服务实现代码
将 UserInfoServiceImpl 中的 Collectors.toList() 替换为 Java 16+ 的 toList() 方法，简化流操作。

添加了类级别的注释文档，包含作者信息、联系方式和日期。

提高了代码可读性并保持功能不变。

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>